# muesliswap-decentralized-farming

./: .gitignore  README.md  build.py  pyproject.toml  submit_ref_script.py
keys/: batcher.addr  batcher.test_addr  batcher.vkey  creator.addr  creator.test_addr  creator.vkey  staker.addr  staker.test_addr  staker.vkey
muesliswap_onchain_staking/: build.py  create_key_pair.py  distribute.py  submit_ref_script.py
muesliswap_onchain_staking/api/: chain_querier.py  config.py  ogmios_iterator.py  server.py
muesliswap_onchain_staking/api/db_models/: __init__.py  db.py  farms.py  staking.py
muesliswap_onchain_staking/api/db_queries/: farms.py  (+2 more)
muesliswap_onchain_staking/offchain/: batch_stake_order.py  batch_stake_orders.py  batch_unstake_orders.py  cancel_stake_order.py  create_farm.py  create_stake_order.py  create_staking_pool.py  mint_free.py  place_stake_order.py  place_unstake_order.py  udpate_emission_rate.py  unstake.py  update_emission_rate.py  util.py
muesliswap_onchain_staking/onchain/: batching.py  batching_types.py  farm_nft.py  one_shot_nft.py  stake_state.py  stake_state_nft.py  stake_state_types.py  staking.py  staking_nft.py  staking_types.py  top_pools.py  unstake_permission_nft.py  util.py
muesliswap_onchain_staking/utils/: __init__.py  network.py
offchain/: create_staking_pool.py
onchain/: batching.py  one_shot_nft.py  stake_state.py  staking.py  staking_types.py  util.py
onchain/utils/: ext_interval.py
report/: report.tex
reports/final_milestone/: feedback-report.tex
reports/milestone2/: report.tex
reports/milestone3/: report.tex
(+8 files in other folders)
